<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="uk.co.computerxpert.macik.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageButton
                    android:id="@+id/btn_1"
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/angus_" android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/btn_2"
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/buwluf_" android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cim1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cim2" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
