<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.computerxpert.macik.Maci_1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">



            <RadioGroup
                android:id="@+id/radioMacikep"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/buwluf_" />

                <RadioButton
                    android:id="@+id/radioButton35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_nev4"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/brumi_" />

                <RadioButton
                    android:id="@+id/radioButton36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_nev3"
                    android:textColor="@android:color/white"
                    android:textColorLink="@android:color/white" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/angus_" />

                <RadioButton
                    android:id="@+id/radioButton37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_nev1"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/barnamacko_" />

                <RadioButton
                    android:id="@+id/radioButton38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_nev3"
                    android:textColor="@android:color/white" />

            </RadioGroup>
            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioMacinev"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButton32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_nev1" />

                        <RadioButton
                            android:id="@+id/radioButton34"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_nev4" />

                        <RadioButton
                            android:id="@+id/radioButton33"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_nev2" />

                        <RadioButton
                            android:id="@+id/radioButton31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_nev3" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
